--- a/css/ibe.css
+++ b/css/ibe.css
@@ -227,3 +227,149 @@
     width: 100%;
     height: 30px;
 }
+
+
+/******* TODO: */
+
+
+.cmsDatePicker-months {
+    display: flex;
+}
+
+.cmsDatePicker-months__current {
+    flex: 1 1 auto;
+    height: 30px;
+    background: #f5f5f5;
+    text-align: center;
+    line-height: 30px;
+}
+.cmsDatePicker-months__prev,
+.cmsDatePicker-months__next {
+    width: 30px;
+    height: 30px;
+    background: var(--base);
+    text-align: center;
+    color: #ffffff;
+    flex: 0 0 auto;
+    border: none;
+    appearance: none;
+    position: relative;
+    cursor: pointer;
+}
+
+.cmsDatePicker-months__prev:after,
+.cmsDatePicker-months__next:after {
+    content: "î¤š";
+    font-family: "sidu";
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    color: #ffffff;
+    z-index: 2;
+}
+
+.cmsDatePicker-months__prev:after {
+    transform: rotate(180deg);
+}
+
+.cmsDatePicker-months__next:after {
+    /*transform: rotate(90deg);*/
+}
+
+.cmsDatePicker-months__current {
+    flex: 1 1 auto;
+    height: 30px;
+    background: #f5f5f5;
+    text-align: center;
+    line-height: 30px;
+}
+
+.cmsDatePicker__monthhead {
+    display: flex;
+    border-bottom: 1px solid var(--base);
+    margin-bottom: 5px
+}
+
+.cmsDatePicker__monthday {
+    flex: 1 0 14.28571428571429%;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 13px;
+    color: #85a8b5
+}
+
+.cmsDatePicker__month {
+    position: relative;
+    margin-bottom: 10px
+}
+
+.cmsDatePicker__month img {
+    width: 100%;
+    height: auto;
+    display: none
+}
+.cmsDatePicker__dayFrame {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.cmsDatePicker__day {
+    flex: 1 0 14.28571428571429%;
+    height: 30px;
+    position: relative;
+    text-align: center;
+
+
+    cursor: pointer;
+    border-bottom: 1px solid #fff;
+    border-radius: 0;
+    background: #fff
+}
+
+.cmsDatePicker__day span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 13px
+}
+
+.cmsDatePicker__day.passed span {
+    color: #f2f2f2;
+    cursor: not-allowed;
+    background: #fff
+}
+
+.cmsDatePicker__day.passed:hover span {
+    color: #f2f2f2;
+    cursor: not-allowed;
+    background: #fff
+}
+
+.cmsDatePicker__day:hover {
+    background: #ffcae6
+}
+
+.cmsDatePicker__day.active {
+    background: var(--base);
+    color: #ffffff
+}
+
+.cmsDatePicker__day.isActiveStart {
+    background: #e3007b;
+    color: #ffffff
+}
+
+.cmsDatePicker__day.isActiveEnd {
+    background: var(--base);
+    color: #ffffff
+}
+.clear {
+    clear: both;
+}
