--- a/css/ibe.css
+++ b/css/ibe.css
@@ -173,6 +173,81 @@
     font-size: 0.8em;
 }
 
+/* Airports */
+.ibe-departure__dropdown {
+
+}
+@media (min-width: 1000px) {
+    .ibe-departure__dropdown {
+        min-width: 800px;
+    }
+}
+.ibe-details {
+
+}
+.ibe-summary {
+    position: relative;
+    border-bottom: solid 1px #E0E0E0;
+}
+.ibe-summary::marker {
+    display: none;
+    content: '';
+}
+.ibe-summary::before {
+    content: '';
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    right: 22px;
+    top: 22px;
+    border: 2px solid #BDBDBD;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+.ibe-details[open] > .ibe-summary::before {
+    transform: rotate(225deg);
+    top: 27px;
+}
+
+.ibe-airport__group {
+
+}
+
+.ibe-airport__list {
+    padding-left: 2em;
+}
+
+.ibe-airport__label {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+}
+.ibe-airport__checkbox {
+    flex-shrink: 0;
+    width: 1em;
+    height: 1em;
+    appearance: none;
+    background-color: #fff;
+    background-image: var(--bs-form-check-bg-image);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: 1px solid var(--ibe-color-font);
+    position: relative;
+}
+.ibe-airport__checkbox:checked {
+    --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+    background-color: var(--ibe-color-secondary);
+    border-color: var(--ibe-color-secondary);
+}
+
+
+
+
+
+
+/* /Airports */
+
 
 /* Tourists */
 .ibe-tourists__row {
