--- a/css/ibe.css
+++ b/css/ibe.css
@@ -101,7 +101,6 @@
 .ibe-dropdown {
     min-width: 100%;
     height: auto;
-    overflow-x: hidden;
     background: #fff;
     position: absolute;
     left: 0;
@@ -132,7 +131,8 @@
 }
 
 .ibe-dropdown__content { 
-
+    overflow-y: auto;
+    max-height: 90vh;
 }
 
 .ibe__overlay {
@@ -183,11 +183,12 @@
     }
 }
 .ibe-details {
-
+    margin-bottom: 5px;
 }
 .ibe-summary {
     position: relative;
     border-bottom: solid 1px #E0E0E0;
+    margin-bottom: 5px;
 }
 .ibe-summary::marker {
     display: none;
@@ -196,31 +197,33 @@
 .ibe-summary::before {
     content: '';
     position: absolute;
-    width: 14px;
-    height: 14px;
-    right: 22px;
-    top: 22px;
+    width: 11px;
+    height: 11px;
+    right: 11px;
+    top: 0px;
     border: 2px solid #BDBDBD;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
 }
 .ibe-details[open] > .ibe-summary::before {
     transform: rotate(225deg);
-    top: 27px;
+    top: 8px;
 }
 
 .ibe-airport__group {
-
+    margin-bottom: 5px;
 }
 
 .ibe-airport__list {
-    padding-left: 2em;
+    padding-left: 1em;
 }
-
+.ibe-airport__item {
+    margin-bottom: 5px;
+}
 .ibe-airport__label {
-    display: inline-flex;
-    align-items: center;
+    display: flex;
     gap: 8px;
+    cursor: pointer;
 }
 .ibe-airport__checkbox {
     flex-shrink: 0;
@@ -233,7 +236,9 @@
     background-position: center;
     background-size: contain;
     border: 1px solid var(--ibe-color-font);
+    border-radius: 2px;
     position: relative;
+    top: 0.125em;
 }
 .ibe-airport__checkbox:checked {
     --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
