--- a/css/ibe.css
+++ b/css/ibe.css
@@ -411,7 +411,7 @@
 
     cursor: pointer;
     border-bottom: 1px solid #fff;
-    border-radius: 0;
+    border-radius: 50%;
     background: #fff
 }
 
