--- a/css/ibe.css
+++ b/css/ibe.css
@@ -322,7 +322,6 @@
 .cmsDatePicker-months__current {
     flex: 1 1 auto;
     height: 30px;
-    background: #f5f5f5;
     text-align: center;
     line-height: 30px;
 }
@@ -330,7 +329,7 @@
 .cmsDatePicker-months__next {
     width: 30px;
     height: 30px;
-    background: var(--base);
+    background: #f5f5f5;
     text-align: center;
     color: #ffffff;
     flex: 0 0 auto;
@@ -338,38 +337,13 @@
     appearance: none;
     position: relative;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
 }
 
-.cmsDatePicker-months__prev:after,
-.cmsDatePicker-months__next:after {
-    content: "î¤š";
-    font-family: "sidu";
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    text-align: center;
-    color: #ffffff;
-    z-index: 2;
-}
 
-.cmsDatePicker-months__prev:after {
-    transform: rotate(180deg);
-}
-
-.cmsDatePicker-months__next:after {
-    /*transform: rotate(90deg);*/
-}
-
-.cmsDatePicker-months__current {
-    flex: 1 1 auto;
-    height: 30px;
-    background: #f5f5f5;
-    text-align: center;
-    line-height: 30px;
-}
 
 .cmsDatePicker__monthhead {
     display: flex;
