--- a/css/ibe.css
+++ b/css/ibe.css
@@ -294,7 +294,7 @@
     font-weight: 500;
 }
 
-
+.ibe-tourists__select,
 .ibe-tourists__select {
     padding: 0.375em 2.25em 0.375em 1em;
     -moz-padding-start: calc(1em - 3px);
