--- a/css/ibe.css
+++ b/css/ibe.css
@@ -187,6 +187,9 @@
     overflow-y: auto;
     max-height: 90vh;
 }
+.ibe-departure .ibe-dropdown__content { 
+    max-height: calc(94vh - 120px);
+}
 
 .ibe__overlay {
     width: 100%;
@@ -400,7 +403,6 @@
     height: 30px;
     background: #f5f5f5;
     text-align: center;
-    color: #ffffff;
     flex: 0 0 auto;
     border: none;
     appearance: none;
