--- a/css/ibe.css
+++ b/css/ibe.css
@@ -114,8 +114,9 @@
     gap: 0.8em;
     background-color: var(--ibe-tab-bg);
     color:#fff;
-    padding: 5px 10px;
+    padding: 8px 10px;
     text-decoration: none;
+    font-size: 14px;
     border-radius: 5px 5px 0 0;
 }
 .ibe-tabs__tab:not(.active) {
@@ -157,7 +158,7 @@
     position: relative;
     background: white;
     border-bottom: 1px solid #999;
-    padding: 8px 10px;
+    padding: 10px 10px;
     min-height: var(--ibe-control-min-height);
 }
 .ibe__toggler:hover {
@@ -424,7 +425,7 @@
     min-width: 150px;
     display: inline-block;
     position: relative;
-    padding: 8px 20px;
+    padding: 10px 20px;
     line-height: 20px;
     text-align: center;
     border-radius: 8px;
